# phlawless-engine

./: CMakeLists.txt  main.cpp
source/components/: Component.cpp  Component.h  SpriteComponent.cpp  SpriteComponent.h
source/core/: Editor.cpp  Editor.h  Engine.cpp  Engine.h
source/cpp/: Engine.cpp
source/header/: Engine.h
source/scene/: Node.cpp  Node.h  Scene.cpp  Scene.h
